Deploy preview for PR 29 🛫

--- a/preview/pr-29/index.html
+++ b/preview/pr-29/index.html
@@ -496,7 +496,7 @@ Please contact leejinho at snu dot ac dot kr if you are interested.</p>
 
 <div class="news">
   <strong>Aug. 2025</strong>
-  Our paper <u>DMO-DB: Mitigating the Data Movement Bottlenecks of GPU-Accelerated Relational OLAP</u> has been accepted to PACT. This work was done in collaboration with HPCP Lab. (Prof. Youngsok Kim) at Yonsei Univ.
+  Our paper <u>DMO-DB: Mitigating the Data Movement Bottlenecks of GPU-Accelerated Relational OLAP</u> has been accepted to PACT. This work was done in collaboration with HPCP Lab. (Prof. Youngsok Kim) at Yonsei Univ. and CISA Lab. (Prof. Joonsung Kim) at SKKU
 </div>
 
 <div class="news">
